Uploaded image for project: 'Kudu'
  1. Kudu
  2. KUDU-1752

C++ client error memory should be bounded

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Critical
    • Resolution: Fixed
    • 1.0.0
    • 1.2.0
    • client

    Description

      The Kudu client can allocate unbounded amounts of memory for error messages today, which is a potential problem for processes using the client. The API to get errors does have a way to indicate the errors overflowed the error buffer, but this isn't set yet.

      Given that error messages can vary significantly in size (as they include a var length string which will soon also include tracing output) and the row, the client should have a way to indicate the max buffer memory size rather than just some number of rows.

      Attachments

        Activity

          People

            aserbin Alexey Serbin
            mjacobs Matthew Jacobs
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: