src/kudu/client/client-unittest.cc
@@ -17,16 +17,21 @@
 //
 // Tests for the client which are true unit tests and don't require a cluster, etc.
 
-#include <boost/bind.hpp>
-#include <gtest/gtest.h>
 #include <string>
 #include <vector>
 
+#include <boost/bind.hpp>
+#include <gtest/gtest.h>
+
 #include "kudu/client/client.h"
 #include "kudu/client/client-internal.h"
+#include "kudu/client/error_collector.h"
+#include "kudu/gutil/ref_counted.h"
+#include "kudu/util/test_macros.h"
 
 using std::string;
 using std::vector;
+using kudu::client::internal::ErrorCollector;
 
 namespace kudu {
 namespace client {
@@ -167,6 +172,40 @@ TEST(ClientUnitTest, TestRetryFunc) {
   ASSERT_TRUE(s.IsTimedOut());
   ASSERT_GT(counter, 5);
   ASSERT_LT(counter, 20);
+}
+
+TEST(ClientUnitTest, TestErrorCollector) {
+  {
+    scoped_refptr<ErrorCollector> ec(new ErrorCollector);
+    // Setting the max memory size limit to 'unlimited'.
+    EXPECT_OK(ec->SetMaxMemSize(0));
+    // Setting the max memory size to 1 byte.
+    EXPECT_OK(ec->SetMaxMemSize(1));
+  }
+
+  // Check that the error collector does not allow to set the memory size limit
+  // if at least one error has been dropped since last flush.
+  {
+    scoped_refptr<ErrorCollector> ec(new ErrorCollector);
+    ec->dropped_errors_cnt_ = 1;
+    Status s = ec->SetMaxMemSize(0);
+    EXPECT_TRUE(s.IsIllegalState());
+    ASSERT_STR_CONTAINS(s.ToString(),
+                        "cannot set new limit: already dropped some errors");
+  }
+
+  // Check that the error collector does not overflow post-factum on call of the
+  // SetMaxMemSize() method.
+  {
+    const size_t size_bytes = 8;
+    scoped_refptr<ErrorCollector> ec(new ErrorCollector);
+    ec->mem_size_bytes_ = size_bytes;
+    EXPECT_OK(ec->SetMaxMemSize(0));
+    EXPECT_OK(ec->SetMaxMemSize(size_bytes));
+    Status s = ec->SetMaxMemSize(size_bytes - 1);
+    EXPECT_TRUE(s.IsIllegalState());
+    ASSERT_STR_CONTAINS(s.ToString(), "already accumulated errors for");
+  }
 }
 
 } // namespace client
